[gd_scene load_steps=5 format=3 uid="uid://bxjaykkfeey4u"]

[ext_resource type="Script" uid="uid://cn0tv0hrxm7bj" path="res://scenes/graders/grader_container.gd" id="1_grdc"]
[ext_resource type="Texture2D" uid="uid://wk16kstrp6in" path="res://icons/polling/reload-custom_1.png" id="2_kgw4v"]
[ext_resource type="Script" uid="uid://bgn8twhr5l2gy" path="res://scenes/spinner.gd" id="3_a4vgf"]

[sub_resource type="StyleBoxLine" id="StyleBoxLine_b487k"]
color = Color(0.266575, 0.266575, 0.266575, 1)
grow_begin = -24.0
grow_end = -24.0
thickness = 3

[node name="GraderContainer" type="VBoxContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_grdc")

[node name="GraderHeaderMarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 35
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 35
theme_override_constants/margin_bottom = 5

[node name="LabelAndChoiceBoxContainer" type="HBoxContainer" parent="GraderHeaderMarginContainer"]
layout_mode = 2
size_flags_vertical = 0

[node name="GraderTypeLabel" type="Label" parent="GraderHeaderMarginContainer/LabelAndChoiceBoxContainer"]
layout_mode = 2
text = "GRADER_TYPE"

[node name="GraderTypeOptionButton" type="OptionButton" parent="GraderHeaderMarginContainer/LabelAndChoiceBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
item_count = 6
popup/item_0/text = "String Check Grader"
popup/item_0/id = 0
popup/item_1/text = "String Similarity Grader"
popup/item_1/id = 1
popup/item_2/text = "Score Model Grader"
popup/item_2/id = 2
popup/item_3/text = "Label Model Grader"
popup/item_3/id = 3
popup/item_4/text = "Python Grader"
popup/item_4/id = 4
popup/item_5/text = "Multi Grader"
popup/item_5/id = 5

[node name="ActualGraderContainer" type="VBoxContainer" parent="."]
layout_mode = 2
size_flags_vertical = 3

[node name="GraderMarginContainer" type="MarginContainer" parent="ActualGraderContainer"]
layout_mode = 2
theme_override_constants/margin_left = 50
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 50
theme_override_constants/margin_bottom = 5

[node name="GraderSettingsContainer" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="GraderVerificationStatus" type="Label" parent="GraderSettingsContainer"]
layout_mode = 2
text = "Grader verified!"

[node name="Spinner" type="TextureRect" parent="GraderSettingsContainer"]
layout_mode = 2
texture = ExtResource("2_kgw4v")
stretch_mode = 3
script = ExtResource("3_a4vgf")

[node name="UseThisGraderButton" type="CheckBox" parent="GraderSettingsContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "GRADER_USE_THIS_GRADER"

[node name="DeleteGraderButton" type="Button" parent="GraderSettingsContainer"]
layout_mode = 2
text = "GRADER_DELETE_GRADER"

[node name="NextGraderSeparator" type="HSeparator" parent="."]
layout_mode = 2
theme_override_styles/separator = SubResource("StyleBoxLine_b487k")

[connection signal="item_selected" from="GraderHeaderMarginContainer/LabelAndChoiceBoxContainer/GraderTypeOptionButton" to="." method="_on_grader_type_option_button_item_selected"]
[connection signal="pressed" from="GraderSettingsContainer/DeleteGraderButton" to="." method="_on_delete_button_pressed"]
